# cf-precheck

./: pyproject.toml
.github/workflows/: precheck_test.yml  publish.yml
checks/tech-files/: sky130A_mr.drc
dependencies/: Dockerfile  build-docker.sh
src/cf_precheck/: _warning_filters.py  check_manager.py  config.py  results.py  runner.py
src/cf_precheck/be_checks/: README.md  run_be_checks  run_cvc  run_extract  run_full_lvs  run_oeb_check  run_openframe_check
src/cf_precheck/be_checks/tech/: magicrc
src/cf_precheck/be_checks/tech/sky130B/: cvcrc  subcutout.txt
src/cf_precheck/checks/: _oeb_report.py  oeb.py
tests/: test_runner_warnings.py
tests/checks/: test_oeb_report.py
