[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-precheck"
dynamic = ["version"]
description = "ChipFoundry MPW tapeout precheck tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "rich",
    # Pin klayout to match the native toolchain in chipfoundry/mpw_precheck
    # (RockyLinux 9 RPM: klayout-0.29.2). PyPI has shipped 0.30+ that are ABI-
    # incompatible with the 0.29.2 native .so files baked in the base image,
    # so leaving this unpinned causes `import pya` to fail with an
    # `undefined symbol: _ZNK2db18shape_interactions...` ImportError after a
    # `pip install --force-reinstall cf-precheck` on top of the base image.
    # If the base image bumps its klayout RPM, bump this pin in lockstep.
    "klayout==0.29.2",
    "numpy",
    "pyverilog",
    "pyyaml",
    "requests",
    "strsimpy",
]

[project.scripts]
cf-precheck = "cf_precheck.cli:main"

[tool.hatch.version]
path = "src/cf_precheck/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_precheck"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
